Add shortcut line metadata
